# BadDadVerb

./: BUILD.md  BUILD_RESULTS.md  CMakeLists.txt
.github/workflows/: build-windows.yml
Presets/: Biohazard_Pulse.xml  Bunker_Bass.xml  Cult_of_the_Bomb.xml  Electromagnetic_Storm.xml  Ghost_Frequency.xml  Ground_Zero.xml  Last_Transmission.xml  Mutant_Groove.xml  Nuclear_Winter.xml  Radioactive_Love.xml  Scavenger_Radio.xml  Siege_Engine.xml  Smell_of_Fallout.xml  Survivors_Lullaby.xml  Wasteland_Signal.xml  Zombies_Coming.xml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h
Source/DSP/: AudioToIR.h  CabinetBlock.h  Compressor.h  DSPHelpers.h  Limiter.h  MetalData.h  NoiseGate.h  SonarSample.h  ToneStack.h  TriodeStage.h  Whale2Data.h  WhaleData.h
Source/UI/: Oscilloscope.h  RustLookAndFeel.h
installer/: BadDadVerb.iss
installer/Windows/: DadBass_Installer.iss
installer/macOS/: build_macos_pkg.sh
scripts/: build.bat  build.sh  build_installer.sh  build_mac.sh  build_windows.bat
